--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
       by distilling the knowledge from an ensemble of models into a single model, thus reducing the need 
       for multiple models and memory. Maybe this can minimize the need of processing power in the future?
     </p>
+    <p>
+      An older paper (2015) from Geoffrey Hinton also touches upon optimization of deep learning 
+      by distilling the knowledge from an ensemble of models into a single model, thus reducing the need 
+      for multiple models and memory.
+    </p>
   </div>
 </body>
 
