--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       neural networks more robust. A known example of how fragile neural networks can be, is this 
       adversarial demonstration from <u>Explaining and Harvesting Adversarial Examples:</u>
     </p> 
-    <img src="img2.webp" alt="">
+    <img src="img2.webp" alt="" height="300px" width="750px">
     <p> 
       In this example the network can detect the panda in the image to the left. Now, if you alter 
       that picture by adding a toned down image of noise with gibbon-like features, the network will 
